--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 Nationalité Film -> TODO ALL
-Acteurs -> Unifier nom et prénom
+Acteurs et réalisateurs-> Unifier nom et prénom
 Genre Film -> Lier avec Film
 Affiche -> Lier avec Film
-Distributeur -> Lier avec Film
 Film -> Relations avec les autres classes à terminer
 
+§§ Validation relations films
