--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 Bouton Précédent suivant - Dans chaque view de chaque controlleur
-Nationalité,Pays
+Nationalité,Pays -> iNSERT/EDIT controller film
 Upload Image -> Edition
 Sécurité Insert,Update,Delete
 
