--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,6 @@
-Bouton Précédent suivant - Dans chaque view de chaque controlleur
 Bouton arrière -> delete
-Nationalité,Pays -> iNSERT/EDIT controller film
-Upload Image -> Edition
+Nationalité -> Edition controller film
+Upload Image -> Edition controller film
 Sécurité Insert,Update,Delete
-
+Ordre croissant des élements dans l'index des controlleurs
 
