--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
-Nationalité -> Edition controller film
-Upload Image -> Edition controller film
-Revoir l'édition/suppression de film
-edition affiche
+Revoir suppression de film
+
+/* Mineur */
 Sécurité Insert,Update,Delete
 Ordre croissant des élements dans l'index des controlleurs
+Script recherche etudiant updat link
 
