improve error view

--- a/todo.txt
+++ b/todo.txt
@@ -7,4 +7,5 @@ Ordre croissant des élements dans l'index des controlleurs
 	* Genre
 	* Nationalite	
 Script recherche acteur -> Move to prod
+Bouton nouveau element -> modal -> Revoir
 
